<resources>
    <string name="app_name">乐升宝</string>
    <string name="app_copyright">青春无限Young团队\n版权所有\nCopyright © 2016&#8211;2017 Young\nAll Rights Reserved</string>
    <string name="name_space">http://tempuri.org/</string>
    <string name="login_url">http://123.207.137.67/Ws/Login.asmx</string>
    <string name="userInfo_url">http://123.207.137.67/Ws/UserInfo.asmx</string>
    <string name="user_url">http://123.207.137.67/Ws/User.asmx</string>

    <!-- slide menu -->
    <string name="title_activity_transfer_money">转账</string>
    <string name="title_activity_charg_money">充值</string>
    <string name="title_activity_safe_setting">安全码设置</string>
    <string name="title_activity_about">关于</string>
    <string name="title_activity_my_msg">我的消息</string>
    <string name="title_activity_login">登录</string>
    <string name="title_activity_register">注册</string>

    <!--Request method -->
    <string name="get_yzm_method">SendYzm</string>
    <string name="login_method">TryLogin</string>
    <string name="register_method">Register</string>
    <string name="getUserInfo_method">GetUserInfo</string>
    <string name="getMyMsg_method">GetAllMsgList</string>
    <string name="getNoReadMsgCount">GetNoReadMsgCount</string>
    <string name="ChangeSafePwd">ChangeSafePwd</string>
    <string name="getUserRecord">GetUserRecord</string>
    <string name="getAccountRecord">GetAccountRecord</string>
    <string name="sendMsgRead">ReadMsg</string>
    <string name="getTransferMsgID">Transfer</string>
    <string name="transferConfirmMethod">TransferComfirm</string>

    <!--login and register-->
    <string name="input_wrong_phone_num">请输入正确的手机号</string>

    <string name="tv_username">用户名</string>
    <string name="tv_psw">密码</string>
    <string name="bt_login">立即登录</string>
    <string name="bt_register">立即注册</string>
    <string name="et_hint_username">手机号</string>
    <string name="et_old_safepassword">输入旧安全码</string>
    <string name="et_new_safepassword">输入安全码</string>
    <string name="et_again_new_safepassword">再次输入安全码</string>
    <string name="about_phone_number">关联手机号</string>
    <string name="et_hint_pdw">密码</string>
    <string name="et_hint_yzm">手机验证码</string>
    <string name="bt_get_yzm">获取验证码</string>
    <string name="register_no_username">请输入用户名</string>
    <string name="et_pdw_less">密码至少为6位数</string>
    <string name="et_hint_confirm_pdw">再次输入密码</string>
    <string name="register_no_yzm">请输入收到的手机验证码</string>
    <string name="register_no_pdw">请输入密码</string>
    <string name="register_pdw_different">两次输入的密码不一致</string>
    <string name="title_activity_user_record">流水账单</string>
    <string name="mouth">月</string>
    <string name="confirm">确定</string>
    <string name="yzm">验证码</string>
    <!--transfer money -->
    <string name="transfer_money_other_num">对方账号</string>
    <string name="transfer_money_charge">转账金额</string>
    <string name="transfer_money_confirm">确定转账</string>


    <string name = "use_safe_password">启用安全码</string>
    <string name = "change_safe_password">修改安全码</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
