<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.young.leshengbao.options.setting.SafeSettingActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways|snap"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/round_login_layout"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_old_safe_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:drawableLeft="@drawable/icon_psw"
            android:drawablePadding="4dp"
            android:hint="@string/et_old_safepassword"
            android:inputType="textPassword|number"
            android:padding="4dp"
            android:singleLine="true"
            android:textColorHint="@color/bg_gray"
            android:visibility="gone"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_gray" />



        <EditText
            android:id="@+id/et_new_safe_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:drawableLeft="@drawable/icon_psw"
            android:drawablePadding="4dp"
            android:hint="@string/et_new_safepassword"
            android:inputType="textPassword|number"
            android:padding="4dp"
            android:singleLine="true"
            android:textColorHint="@color/bg_gray"
            android:textSize="14sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_gray" />
        <EditText
            android:id="@+id/et_again_new_safe_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:drawableLeft="@drawable/icon_psw"
            android:drawablePadding="4dp"
            android:hint="@string/et_again_new_safepassword"
            android:inputType="textPassword|number"
            android:padding="4dp"
            android:singleLine="true"
            android:textColorHint="@color/bg_gray"
            android:textSize="14sp" />

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/change_safe_password"
        android:layout_margin="@dimen/pad"
        android:id="@+id/textView"
        android:layout_gravity="right" />

    <Button
        android:id="@+id/bt_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/pad"
        android:text="@string/confirm" />


</LinearLayout>
