<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways|snap"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/round_login_layout"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_safe_num"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:drawableLeft="@drawable/icon_psw"
            android:drawablePadding="4dp"
            android:hint="@string/et_new_safepassword"
            android:inputType="number"

            android:padding="4dp"
            android:singleLine="true"
            android:textColorHint="@color/bg_gray"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_gray" />

        <EditText
            android:id="@+id/et_again_new_safe_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:background="@null"
            android:drawableLeft="@drawable/icon_psw"
            android:drawablePadding="4dp"
            android:hint="@string/et_again_new_safepassword"
            android:inputType="number"
            android:padding="4dp"
            android:singleLine="true"
            android:textColorHint="@color/bg_gray"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_yzm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@null"
                android:drawableLeft="@drawable/icon_psw"
                android:drawablePadding="4dp"
                android:hint="@string/et_hint_yzm"
                android:padding="4dp"
                android:singleLine="true"
                android:textColorHint="@color/bg_gray"
                android:textSize="14sp" />


        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/image_get_yzm"
        android:layout_width="match_parent"
        android:layout_height="120dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="看不清，换一张"
        android:textSize="@dimen/small_textSize"
        android:textColor="@color/black"
        android:layout_margin="@dimen/pad"
        android:id="@+id/next_page"/>

    <Button
        android:id="@+id/bt_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm" />

</LinearLayout>
