<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color"
    android:gravity="center_horizontal"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways|snap"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_margin="20dp"-->
        <!--android:background="@drawable/round_login_layout"-->
        <!--android:focusable="true"-->
        <!--android:focusableInTouchMode="true"-->
        <!--android:gravity="center_vertical"-->
        <!--android:orientation="vertical">-->

        <!--<EditText-->
            <!--android:id="@+id/et_username"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="10dp"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:layout_marginRight="20dp"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:background="@null"-->
            <!--android:drawableLeft="@drawable/icon_user"-->
            <!--android:drawablePadding="4dp"-->
            <!--android:hint="@string/et_hint_username"-->
            <!--android:inputType="number"-->
            <!--android:padding="4dp"-->
            <!--android:singleLine="true"-->
            <!--android:textColorHint="@color/bg_gray"-->
            <!--android:textSize="14sp" />-->

        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="1dp"-->
            <!--android:background="@color/bg_gray" />-->

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="10dp"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:layout_marginRight="20dp"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:orientation="horizontal">-->

            <!--<EditText-->
                <!--android:id="@+id/et_yzm"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="1"-->
                <!--android:background="@null"-->
                <!--android:drawableLeft="@drawable/icon_psw"-->
                <!--android:drawablePadding="4dp"-->
                <!--android:hint="@string/et_hint_yzm"-->
                <!--android:inputType="number"-->
                <!--android:padding="4dp"-->
                <!--android:singleLine="true"-->
                <!--android:textColorHint="@color/bg_gray"-->
                <!--android:textSize="14sp" />-->

            <!--<Button-->
                <!--android:id="@+id/bt_get_yzm"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:background="@drawable/bg_button_selector"-->
                <!--android:text="@string/bt_get_yzm" />-->
        <!--</LinearLayout>-->

        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="1dp"-->
            <!--android:background="@color/bg_gray" />-->

        <!--<EditText-->
            <!--android:id="@+id/et_pwd"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="10dp"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:layout_marginRight="20dp"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:background="@null"-->
            <!--android:drawableLeft="@drawable/icon_psw"-->
            <!--android:drawablePadding="4dp"-->
            <!--android:hint="@string/et_hint_pdw"-->
            <!--android:inputType="textPassword"-->
            <!--android:padding="4dp"-->
            <!--android:singleLine="true"-->
            <!--android:textColorHint="@color/bg_gray"-->
            <!--android:textSize="14sp" />-->

        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="1dp"-->
            <!--android:background="@color/bg_gray" />-->

        <!--<EditText-->
            <!--android:id="@+id/et_confirm_pwd"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="10dp"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:layout_marginRight="20dp"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:background="@null"-->
            <!--android:drawableLeft="@drawable/icon_psw"-->
            <!--android:drawablePadding="4dp"-->
            <!--android:hint="@string/et_hint_confirm_pdw"-->
            <!--android:inputType="textPassword"-->
            <!--android:padding="4dp"-->
            <!--android:singleLine="true"-->
            <!--android:textColorHint="@color/bg_gray"-->
            <!--android:textSize="14sp" />-->

    <!--</LinearLayout>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_large"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_username"/>
        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large"
            android:layout_marginLeft="@dimen/margin_xlarge"
            android:layout_marginRight="@dimen/margin_xlarge"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@null"
            android:hint="@string/et_hint_username"
            android:inputType="number"
            android:padding="@dimen/margin_normal"
            android:singleLine="true"
            android:textColorHint="@color/bg_gray"
            android:textSize="@dimen/font_size_small" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_large"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="验证码"/>

        <EditText
            android:id="@+id/et_yzm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/margin_large"
            android:layout_marginLeft="@dimen/margin_xlarge"
            android:layout_marginRight="@dimen/margin_xlarge"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@null"
            android:hint="@string/et_hint_yzm"
            android:inputType="number"
            android:padding="@dimen/margin_normal"
            android:singleLine="true"
            android:textColorHint="@color/bg_gray"
            android:textSize="@dimen/font_size_small" />

        <Button
        android:id="@+id/bt_get_yzm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:padding="@dimen/margin_small"
        android:background="@drawable/bg_button_selector"
        android:text="@string/bt_get_yzm" />

    </LinearLayout>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="@dimen/margin_large"
    android:layout_marginTop="@dimen/margin_large"
    android:layout_marginBottom="@dimen/margin_large"
    android:gravity="center_vertical"
    android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/et_hint_pdw"/>
    <EditText
        android:id="@+id/et_pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_large"
        android:layout_marginLeft="@dimen/margin_xlarge"
        android:layout_marginRight="@dimen/margin_xlarge"
        android:layout_marginTop="@dimen/margin_large"
        android:background="@null"
        android:hint="@string/et_hint_pdw"
        android:inputType="textPassword"
        android:padding="@dimen/margin_normal"
        android:singleLine="true"
        android:textColorHint="@color/bg_gray"
        android:textSize="@dimen/font_size_small" />


</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_large"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="确认密码"/>

        <EditText
            android:id="@+id/et_confirm_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large"
            android:layout_marginLeft="@dimen/margin_xlarge"
            android:layout_marginRight="@dimen/margin_xlarge"
            android:layout_marginTop="@dimen/margin_large"
            android:background="@null"
            android:hint="@string/et_hint_confirm_pdw"
            android:inputType="textPassword"
            android:padding="@dimen/margin_normal"
            android:singleLine="true"
            android:textColorHint="@color/bg_gray"
            android:textSize="@dimen/font_size_small" />

    </LinearLayout>



    <Button
        android:id="@+id/bt_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_selector"
        android:layout_margin="@dimen/margin_large"
        android:textSize="@dimen/font_size_big"
        android:text="@string/bt_register" />

</LinearLayout>
